# voice-cloning

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607010001_initial_persistence.py  202607010002_generated_audio_export_ledger.py
backend/src/voice_cloning/: __init__.py  api.py  cache.py  config.py  elevenlabs_client.py  models.py  providers.py  sample_processors.py  samples.py  voice_library.py  voice_library_factory.py
backend/src/voice_cloning/api/: __init__.py  app.py  disconnect.py  schemas.py  serializers.py
backend/src/voice_cloning/api/routes/: generated_audio.py  health.py  metadata.py  sample_processing.py  sample_processing_sources.py  settings.py  speech.py  speech_jobs.py  voice_tuning_presets.py  voices.py
backend/src/voice_cloning/persistence/: __init__.py  contracts.py  database.py  file_store.py  generated_audio.py  generated_audio_exports.py  jobs.py  models.py  postgres_voice_library.py  settings.py  tuning_presets.py  voices.py
backend/src/voice_cloning/services/: app_settings.py  cancellation.py  generated_audio_archive.py  generated_audio_export.py  media_commands.py  media_sources.py  sample_processing.py  speech.py  speech_audio.py  speech_jobs.py  user_tuning_presets.py  voice_ingestion.py
backend/tests/: test_api.py  test_app_settings.py  test_generated_audio_archive.py  test_generated_audio_export.py  test_generated_audio_export_api.py  test_persistence.py  test_speech_audio.py  test_user_tuning_presets.py
docs/: ADDING_PROVIDER.md  API.md  ARCHITECTURE.md  PERSISTENCE_ROLLOUT.md  USAGE.md  (+3 more)
(+160 files in other folders)
