[project]
name = "voice-cloning-api"
version = "0.1.0"
description = "Local FastAPI proxy for provider-backed voice cloning."
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.124.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]
sample-processing = [
  "demucs==4.0.1",
  "torchcodec>=0.14.0",
]
diarization = [
  "faster-whisper>=1.2.1",
  "pyannote.audio>=4.0.5",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_cloning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
